// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LanguageToggle /> { locale: "en" } renders 1`] = `
<div>
  <div>
    <a
      href="/"
    >
      Lire en français
    </a>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "fr" } renders 1`] = `
<div>
  <div>
    <a
      href="/"
    >
      Read in English
    </a>
  </div>
</div>
`;
